Enhance pdf generation with version 2.0 (#2304)